--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
   build:
     commands:
       - npm install
-      - export BUCKET=YOUR-BUCKET-NAME
-      - aws cloudformation package --template-file template.yml --s3-bucket YOUR-BUCKET-NAME --output-template-file outputtemplate.yaml
+      - export BUCKET=demosampledemo
+      - aws cloudformation package --template-file template.yml --s3-bucket demosampledemo --output-template-file outputtemplate.yaml
 artifacts:
   type: zip
   files:
